--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/Rerimoi/DAS#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "nodemon": "^1.18.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "popper.js": "^1.14.5"
   }
 }
