--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.3.1",
     "nodemon": "^1.18.5",
     "path": "^0.12.7",
-    "popper.js": "^1.14.4"
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.5"
   }
 }
