--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.13",
+    "node-stopwatch": "0.0.1",
+    "nodemon": "^1.18.5",
     "path": "^0.12.7",
     "popper.js": "^1.14.5"
   }
