--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "ejs": "^2.6.1",
-     "nodemon": "^1.18.5",
-     "express": "^4.16.4",
+    "express": "^4.16.4",
+    "i": "^0.3.6",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.13",
+    "node-stopwatch": "0.0.1",
+    "nodemon": "^1.18.5",
     "path": "^0.12.7",
     "popper.js": "^1.14.5"
   }
